--- a/style.css
+++ b/style.css
@@ -54,12 +54,31 @@ h1 {
   margin-top: 100px;
 }
 
+.legenda {
+  font-family: 'Open Sans', sans-serif !important
+}
+
+.info {
+  font-family: 'Open Sans', sans-serif !important;
+  color: rgb(66, 125, 253);
+  font-size: .8em;
+}
+
 img {
   max-width: 100%;
   display: block;
 }
 
 .header {
+  /*position: fixed;
+  top: 0px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);*/
   position: fixed;
   top: 0px;
   width: 100%;
